--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@angular/router": "~11.2.13",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "bootstrap": "^4.5.0",
+    "ngx-cookie-service": "^12.0.3",
+    "ngx-star-rating": "^2.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
