--- a/package.json
+++ b/package.json
@@ -25,19 +25,18 @@
         "@angular/platform-browser-dynamic": "~11.2.13",
         "@angular/router": "~11.2.13",
         "@ng-bootstrap/ng-bootstrap": "^9.1.3",
-        "bootstrap": "^4.5.0",
+        "bootstrap": "^4.6.1",
         "creditcardpayments": "^1.0.3",
-        "firebase": "^9.1.3",
+        "firebase": "^9.5.0",
         "ngx-cookie-service": "^12.0.3",
-        "ngx-star-rating": "^2.0.3",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.11.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.1102.14",
-        "@angular/cli": "~11.2.12",
-        "@angular/compiler-cli": "~11.2.13",
+        "@angular-devkit/build-angular": "^0.1102.15",
+        "@angular/cli": "^11.2.15",
+        "@angular/compiler-cli": "^11.2.14",
         "@types/jasmine": "~3.6.0",
         "@types/node": "^12.11.1",
         "codelyzer": "^6.0.0",
@@ -47,10 +46,10 @@
         "karma-chrome-launcher": "~3.1.0",
         "karma-coverage": "~2.0.3",
         "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
+        "karma-jasmine-html-reporter": "^1.7.0",
         "protractor": "~7.0.0",
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
-        "typescript": "~4.1.5"
+        "typescript": "^4.1.6"
     }
 }
